# sharpened_cosine

./: README.md  main.py  pyproject.toml
src/: __init__.py
static/: index.css
templates/: index.html  result.html
